# coin98-vault-evm

./: .gitignore  README.md  hardhat.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
contracts/: Coin98Vault.sol  Coin98VaultNFT.sol  Coin98VaultNFTFactory.sol  Coin98VaultNftProxy.sol  Coin98VaultV2.sol  Coin98VaultV2Proxy.sol  Coin98VaultV3.sol  Collection.sol  CreditVaultNFT.sol  MatrixVault.sol  VaultNFT.sol
contracts/interfaces/: IBroadcaster.sol  ICoin98Vault.sol  ICoin98VaultNft.sol  ICoin98VaultNftFactory.sol  ICollection.sol  ICreditVaultNFT.sol  IERC165.sol  IERC20.sol  IERC4494.sol  IERC721.sol  IERC721Enumerable.sol  IERC721Metadata.sol  IERC721Receiver.sol  IPriceAggregator.sol  IVRC725.sol  IVaultConfig.sol  IVaultNft.sol  IWETH.sol
contracts/lib/: BitMaps.sol  BroadcasterHelper.sol  Common.sol  ERC165.sol  ERC721.sol  IERC1271.sol  IERC4494.sol  IERC721Metadata.sol  IVRC25.sol  IVRC725.sol  Module.sol  SignatureChecker.sol  Strings.sol  Token.sol  Upgradable.sol  VRC25.sol  VRC725.sol
contracts/libraries/: Address.sol  AdvancedERC20.sol  Clones.sol  (+15 more)
deploy/: deploy.js
evm/: .editorconfig  hardhat.config.ts  package.json
programs/vault/: Cargo.toml
programs/vault/src/: constants.rs  lib.rs  shared.rs
scripts/: deploy.ts  deployVault.script.ts
solana/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package.json  readme.md  tsconfig.json
solana/programs/vault/: Cargo.toml
solana/programs/vault/src/: constant.rs  constants.rs  context.rs  error.rs  lib.rs  shared.rs  state.rs
solana/programs/vault/tests/: main.rs  ownership.rs  redeem_nft.rs  redeem_token.rs  set_vault.rs  withdraw.rs
solana/programs/vault/tests/utils/: helpers.rs  instructions.rs  mod.rs  wallet.rs
tests/: matrix-vault.spec.ts  vault-factory.spec.ts  vault-nft.spec.ts  vault-proxy.spec.ts  vault_admin.spec.ts  vault_sponsor_gas.spec.ts  vault_user.spec.ts
(+44 files in other folders)
