[package]
name = "coin98-vault"
version = "1.2.5"
authors = ["Coin98"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
anchor-lang = "0.24.2"
arrayref = "0.3.6"
num_enum = "0.5.4"
solana-program = "1.9.13"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []

[lib]
name = "vault"
crate-type = ["cdylib", "lib"]
